tests/should_fail/struct_bad_field.nv
module main

// SHOULD FAIL: accessing a field that doesn't exist on a struct
struct Point { x: Int, y: Int }
let p = Point { x: 1, y: 2 }
println(p.z)
